--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello World</title>
+    <title>Card Sort</title>
   </head>
+
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello World!</h1>
-      <h2>This is a template</h2>
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
+      <div class="row my-3">
+        <label for="txt_value" class="col-2 col-form-label">
+          <h3>Original:</h3>
+        </label>
+        <div class="col-3">
+          <input
+            type="text"
+            id="txt_value"
+            class="form-control"
+            placeholder=""
+          />
+        </div>
+        <div class="col-1">
+          <button id="btn_draw">DRAW</button>
+        </div>
+        <div class="col-1">
+          <button id="btn_sort">SORT</button>
+        </div>
+      </div>
+      <div class="row file-original justify-content-start"></div>
+      <div class="col-2">
+        <h4>Bubble Log:</h4>
+      </div>
+      <div class="row file-sorted justify-content-start"></div>
     </div>
   </body>
 </html>
