--- a/src/index.html
+++ b/src/index.html
@@ -1,38 +1,47 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Card Sort</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Bubble Sorting Method</title>
   </head>
 
-  <body>
-    <div class="container-fluid text-center">
-      <div class="row my-3">
-        <label for="txt_value" class="col-2 col-form-label">
-          <h3>Original:</h3>
-        </label>
-        <div class="col-3">
+  <body class="bg-dark">
+    <div id="container" class="container h-100 ">
+      <div class="row pt-2 text-light align-items-center">
+        <div class="col-12 p-1">
+          <h3>Amount:</h3>
           <input
+            style="width: 3rem;"
             type="number"
-            id="txt_value"
-            class="form-control"
-            placeholder=""
+            name=""
+            id="amount"
+            min="2"
+            max="12"
           />
+          <a class="btn btn-outline-primary" type="button" id="draw">draw</a>
+          <a class="btn btn-outline-primary" type="button" id="sort">sort</a>
         </div>
-        <div class="col-1">
-          <button id="btn_draw">DRAW</button>
-        </div>
-        <div class="col-1">
-          <button id="btn_sort">SORT</button>
+        <div class="col-12 p-1">
+          <h4>Original:</h4>
         </div>
       </div>
-      <div class="row file-original justify-content-start"></div>
-      <div class="col-2">
-        <h4>Bubble Log:</h4>
-      </div>
-      <div class="row file-sorted justify-content-start"></div>
+      <div id="first-row" class="row"></div>
     </div>
+
+    <script src="./js/index.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
